--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
     </section>
 
     <footer>
-        <p class="Print"><small>Printed from https://saifali.ca</small></p>
+        <p class="Print"><small>Printed from https://saifalisuleman.github.io/resume/</small></p>
         <p class="dontPrint"><i class="fa fa-print"></i> &nbsp; <a href="javascript:window.print()">Print Resume</a></p>
-        <p class="dontPrint"><small>&copy; 2020 by <a>Saifali Suleman</a>.<br>Proudly created with HTML and CSS</small></p>
+        <p class="dontPrint"><small>&copy; 2020 by <a href='https://saifalisuleman.github.io'>Saifali Suleman</a>.<br>Proudly created with HTML and CSS</small></p>
     </footer>
 </div>
 </body>
