--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Saifali</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 <div class="wrapper">
     <header>
-        <img class="dontPrint onlyDesktop" src="images/59619042.jpg" alt="logo">
-        <img class="dontPrint contMob icon" src="images/5543.jpg" alt="logo">
+        <img class="dontPrint onlyDesktop" src="59619042.jpg" alt="logo">
+        <img class="dontPrint contMob icon" src="5543.jpg" alt="logo">
         <h1>Saifali Suleman</h1>
         <p></p>
         <ul>
